# -bazel_go

./: .bazelrc  .gitignore  MODULE.bazel  go.mod
common/greetings/: BUILD.bazel  greetings.go  greetings_test.go
src/app/: BUILD.bazel  main.go
src/handlers/: BUILD.bazel  handler.go
